2011-09-26  David Levin  <levin@chromium.org>

        watchlist: Add parsing for definition section.
        https://bugs.webkit.org/show_bug.cgi?id=68850

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/watchlist/watchlist.py:
        * Scripts/webkitpy/common/watchlist/watchlistparser.py:
        * Scripts/webkitpy/common/watchlist/watchlistparser_unittest.py:

2011-09-26  Simon Fraser  <simon.fraser@apple.com>

        Fix WebKitTestRunner builds for Cairo, Windows and Qt.

        * WebKitTestRunner/cairo/TestInvocationCairo.cpp:
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):
        * WebKitTestRunner/win/TestInvocationWin.cpp:
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):

2011-09-26  Simon Fraser  <simon.fraser@apple.com>

        Repaint tests don't work in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=68453

        Reviewed by Sam Weinig.
        
        Convert DumpRenderTree to use use the repaint rects
        exposed via WebKit API when generating the repaint test
        overlay.
        
        Fix WebKitTestRunner to work with repaint tests, again
        using the repaint rects exposed from WK2.
        
        In both cases, layoutTestController.display() now just
        forces a display of the web view, and turns on repaint
        rect tracking on the main FrameView.
        
        Later, when pixel results are requested, the alpha overlay
        that shows the repaint rects is generated using the list
        of rects supplied by WebCore.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):
        (resetWebViewToConsistentStateBeforeTesting):
        (displayWebView):
        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
        (paintRepaintRectOverlay):
        (createBitmapContextFromWebView):
        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::beginTesting):