@@ -1,3 +1,14 @@
+2011-09-26  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        garden-o-matic should not say "Just now" when it doesn't actually know when an event happened.
+        https://bugs.webkit.org/show_bug.cgi?id=68841
+
+        Reviewed by Adam Barth.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui.js: Changed ui.RelativeTime to not initialize with current time.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications_unittests.js: Adjusted unit tests.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui_unittests.js: Ditto.
+
 2011-09-26  David Levin  <levin@chromium.org>
 
         watchlist: Add parsing for definition section.
